# orpg

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile  vcpkg.json
.github/workflows/: clang.yml  clang10.yml  code.analysis.msvc.yml  deployment.trunk.yml  gcc.yml  gcc10.yml  gcc11.yml  msvc.yml  msvc2019.yml
data/: preferences.json  template.html  test.lua
docs/: Styleguide.md
inc/: config.h  controller.h  model.h  sdl_canvas.h  view.h
inc/controller/events/: finger_down.h  key_pressed.h  mouse_button_down.h  mouse_motion.h  quit.h  time_tick.h
inc/controller/guards/: is_key.h  is_mobile.h
interface2sec21/: CMakeLists.txt
src/: config.h.in  configuration.h  data.h  entities.h  extents.h  file_io.h  main.cpp  orpg.html.in  point.h  rect.h  settings.h  tags.h  tile_map.h
src/components/: collision.h  drawable.h  layers.h  movement_speed.h  npc.h  player.h  position.h  triggerable.h  velocity.h
src/entities/: blocked.h  chest.h  none.h  portal.h
test/: CMakeLists.txt  resource_manager.cpp
tests/: CMakeLists.txt  catch_main.cpp  player.cpp  point.cpp  rect.cpp
